@@ -170,3 +170,12 @@ add_library(animationextension MODULE ${animationextension_SRCS}
 target_link_libraries(animationextension ${LINK_LIBS})
 install(TARGETS animationextension DESTINATION ${DESTINATION_DIR})
 
+### Lin Morph Animation
+set(linmorphextension_SRCS linmorphextension.cpp linmorphdialog.cpp )
+qt4_add_resources(linmorphextension_RC_SRCS linmorph.qrc)
+qt4_wrap_ui(linmorphdialog_UIS_H linmorphdialog.ui)
+qt4_automoc(${linmorphextension_SRCS})
+add_library(linmorphextension MODULE ${linmorphextension_SRCS}
+  ${linmorphdialog_UIS_H} ${linmorphextension_RC_SRCS} ) 
+target_link_libraries(linmorphextension ${LINK_LIBS})
+install(TARGETS linmorphextension DESTINATION ${DESTINATION_DIR})
